--- a/requirements.txt
+++ b/requirements.txt
@@ -132,7 +132,7 @@ protobuf==4.23.3
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
-pyarrow==12.0.1
+pyarrow>=12.0.0
 pybtex==0.24.0
 pycparser==2.21
 pydantic==1.10.17
