--- a/requirements.txt
+++ b/requirements.txt
@@ -132,7 +132,7 @@ protobuf==4.23.3
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
-pyarrow>=12.0.0
+pyarrow==12.0.0
 pybtex==0.24.0
 pycparser==2.21
 pydantic==1.10.17
@@ -197,7 +197,7 @@ tifffile==2024.7.24
 tinycss2==1.2.1
 toml==0.10.2
 toolz==0.12.0
-torch==2.0.1
+torch==2.2.0
 torchaudio==2.0.2
 torchvision==0.15.2
 tornado==6.3.2
